<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompassActivity">

    <ImageView
        android:id="@+id/image_wheel"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/compass_wheel"
        android:src="@drawable/wheel_compass" />

    <ImageView
        android:id="@+id/image_pointer"
        android:layout_width="20dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/compass_pointer"
        android:scaleType="fitXY"
        android:src="@drawable/pointer_compass" />

    <TextView
        android:id="@+id/sotw_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/orientationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_wheel"
        android:layout_marginTop="16dp"
        android:text="@string/orientation"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gpsOrientationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orientationTextView"
        android:layout_marginTop="8dp"
        android:text="@string/gps_orientation"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/altitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpsOrientationTextView"
        android:layout_marginTop="8dp"
        android:text="@string/altitude"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/altitudeTextView"
        android:layout_marginTop="8dp"
        android:text="@string/latitude"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeTextView"
        android:layout_marginTop="8dp"
        android:text="@string/longitude"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/brightnessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeTextView"
        android:layout_marginTop="8dp"
        android:text="@string/brightness"
        android:textSize="16sp" />

</RelativeLayout>