<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CompassFragment">

    <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/compass"
            android:textSize="24sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/use_the_compass_to_track_your_orientation"
            android:textSize="16sp" />

    <ImageView
            android:id="@+id/image_wheel"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_below="@id/descriptionTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/compass_wheel"
            android:src="@drawable/wheel_compass" />

    <ImageView
            android:id="@+id/image_pointer"
            android:layout_width="20dp"
            android:layout_height="240dp"
            android:layout_below="@id/descriptionTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="131dp"
            android:contentDescription="@string/compass_pointer"
            android:scaleType="fitXY"
            android:src="@drawable/pointer_compass" />

    <TextView
            android:id="@+id/descriptionQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="18dp"
            android:text="@string/the_compass_rose_is_nothing_but_a_star_with_an_infinite_number_of_rays_pointing_in_all_directions_joan_d_vinge"
            android:textSize="14sp" />

    <TextView
            android:id="@+id/sotw_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_wheel" />

    <TextView
            android:id="@+id/gpsOrientationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orientationTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/gps_orientation"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/orientationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sotw_label"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="52dp"
            android:text="@string/orientation"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/altitudeTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/latitude"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/latitudeTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/longitude"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/brightnessTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/longitudeTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/brightness"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/altitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gpsOrientationTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/altitude"
            android:textSize="18sp"
            android:textStyle="bold" />

</RelativeLayout>