<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/deleteEntryPopupConstraint">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPopUp"
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:background="@drawable/popup_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


        <TextView
                android:id="@+id/textView_delete_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_popup_delete_question"
                android:textColor="@color/blackSpecial"
                android:textSize="20sp"
                android:paddingTop="28dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="@id/layoutPopUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" />

        <Button
                android:id="@+id/button_deleteEntry_no"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/text_button_no"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp" />

        <Button
                android:id="@+id/button_deleteEntry_yes"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/text_button_yes"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:contentDescription="@string/text_logo_description"
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutPopUp"
            app:layout_constraintBottom_toTopOf="@id/layoutPopUp" />


</androidx.constraintlayout.widget.ConstraintLayout>