<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GpsFragment"
        android:id="@+id/gps_constraintLayout"
        tools:layout_editor_absoluteY="-1dp"
        tools:layout_editor_absoluteX="0dp">

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:src="@drawable/logo"
            android:id="@+id/gps_logo"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

    <TextView
            android:text="@string/text_gps_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gps_textview_distance"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/gps_spinner_type"
            app:layout_constraintTop_toBottomOf="@+id/gps_textview_duration"
            android:layout_marginTop="20dp" />

    <Spinner
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:id="@+id/gps_spinner_type"
            app:layout_constraintStart_toEndOf="@+id/gps_textview_distance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gps_textview_duration"
            android:layout_marginTop="25dp" />

    <TextView
            android:text="@string/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/gps_textview_duration"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/gps_textview_duration_status"
            app:layout_constraintHorizontal_bias="0.5" />

    <TextView
            android:text="@string/text_gps_duration_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/gps_textview_duration_status"
            android:textSize="26sp"
            app:layout_constraintTop_toBottomOf="@+id/gps_logo"
            android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.5" />

    <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_width="410dp"
            android:layout_height="297dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gps_spinner_type"
            android:layout_marginTop="48dp" />

    <Button
            android:text="@string/text_button_start_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_gps_start"
            app:layout_constraintStart_toEndOf="@+id/button_gps_stop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="35dp" />

    <Button
            android:text="@string/text_button_stop_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_gps_stop"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_gps_start"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginStart="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>